[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/object/storage.gd" type="Script" id=1]

[node name="storage_0" type="StaticBody2D"]
z_index = 1
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="mouse_click" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="mouse_click"]
position = Vector2( 6, 3 )
polygon = PoolVector2Array( -4, 12, 9, 5, 9, -9, 0, -13, -15, -7, -15, 8, -8, 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 6, 3 )
polygon = PoolVector2Array( -6, 13, 10, 5, 0, 0, -16, 8 )

[node name="player_nearby" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="player_nearby"]
polygon = PoolVector2Array( -32, 8, 0, 24, 32, 8, 0, -9 )

[connection signal="input_event" from="mouse_click" to="." method="_on_mouse_click_input_event"]
[connection signal="area_entered" from="player_nearby" to="." method="_on_player_nearby_area_entered"]
[connection signal="area_exited" from="player_nearby" to="." method="_on_player_nearby_area_exited"]
